<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".Address">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/location_cause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/adxml"
        android:layout_width="254dp"
        android:layout_height="70dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="78dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/addtext3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/landmarkHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adxml" />

    <EditText
        android:id="@+id/mobileNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/mobileHint"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addtext3" />

    <Button
        android:id="@+id/addSave"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="230dp"
        android:text="@string/saveBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobileNum" />
</androidx.constraintlayout.widget.ConstraintLayout>